--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
         margin-left:auto;
         margin-right:auto;
     }
-    #td-body1{
+    td.body1{
         color: #438EFF;
         font-size: 60;
         font-family: arial;
@@ -17,7 +17,7 @@
         width: 600px;
         background-color:#c6c6c6;
     }
-    #td-body2{
+    td.body2{
         color: #438EFF;
         font-size: 20;
         font-family: arial;
