--- a/html/head.tmpl
+++ b/html/head.tmpl
@@ -1,4 +1,7 @@
-<head>
-<link rel="stylesheet" type="text/css" href="../css/style.css">
-<link rel="stylesheet" type="text/css" href="../css/header.css">
-</head>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/header.css">
+		<title>${page_title}</title>
+	</head>
