--- a/html/header.tmpl
+++ b/html/header.tmpl
@@ -1,5 +1,6 @@
-<div id="header">
-	<div id="logo"><a class="coloredLink" href="/index/">Chalkboard</a></div>
-	<div id="teacherLogin"><a class="coloredLink" href="">Teacher Log-in</a></div>
-	<div id="studentLogin"><a class="coloredLink" href="">Student Log-in</a></div>
-</div>
+	<body>
+		<div id="header">
+			<div id="logo"><a class="coloredLink" href="/index/">Chalkboard</a></div>
+			<div id="teacherLogin"><a class="coloredLink" href="">Teacher Log-in</a></div>
+			<div id="studentLogin"><a class="coloredLink" href="">Student Log-in</a></div>
+		</div>
