--- a/html/body.tmpl
+++ b/html/body.tmpl
@@ -1,3 +1,5 @@
+		
+	<div id="bodyarea">
 		<div id="div-body1">   
 			<table id="table-body1">
 			    <tr>
@@ -23,3 +25,4 @@
 			        
 			</table>
 		</div>
+	</div>
