--- a/html/head.tmpl
+++ b/html/head.tmpl
@@ -3,5 +3,6 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<link rel="stylesheet" type="text/css" href="../css/header.css">
+		<link rel="stylesheet" type="text/css" href="../css/footer.css">
 		<title>${page_title}</title>
 	</head>
