--- a/html/header.tmpl
+++ b/html/header.tmpl
@@ -1,5 +1,5 @@
 	<body>
 		<div id="header">
-			<div id="logo"><a class="coloredLink" href="/index/">Chalkboard</a></div>
+			<div id="logo"><a class="coloredLink" href="/">Chalkboard</a></div>
 			<div id="loginDiv"><a class="coloredLink" href="">Log In</a></div>
 		</div>
