--- a/html/body.tmpl
+++ b/html/body.tmpl
@@ -1,28 +1,19 @@
 		
 	<div id="bodyarea">
-		<div id="div-body1">   
-			<table id="table-body1">
-			    <tr>
-			        <td class="body1">Teaching Assistant</td>
-			        
-			    </tr>
-			    <tr>
-			        <td class="body2">
-			            The teaching assistant role enables the user to create a class page, upload documents, manage calander information,set visibility of documents, assign grades, and invite students to join a class.
-			        </td>    
-			    </tr>
-			    <tr height="30px">
-			    </tr>
-			    <tr>
-			        <td class="body1">Student</td>
-			        
-			    </tr>
-			    <tr>
-			        <td class="body2">
-			            The student role enables the user to join/view class pages, upload documents, and view calander info.
-			        </td>
-			    </tr>
-			        
-			</table>
-		</div>
+		<table class="introbodytable" id="ta-body-table">
+		    <th>Teaching Assistants</th>
+		    <tr>
+		        <td>
+		            The teaching assistant role enables the user to create a class page, upload documents, manage calander information,set visibility of documents, assign grades, and invite students to join a class.
+		        </td>    
+		    </tr>
+		</table>
+		<table class="introbodytable" id="students-body-table">
+		    <th>Students</th>
+		    <tr>
+		        <td>
+		            The student role enables the user to join/view class pages, upload documents, and view calander info.
+		        </td>
+		    </tr>
+		</table>
 	</div>
