--- a/html/footer.tmpl
+++ b/html/footer.tmpl
@@ -1,13 +1,13 @@
 		<div id="footer">
-			<div id="footerImg"><a href="/index">
+			<div id="footerImg"><a href="/">
 			</div>
 			<div id="footerAbout">
-				<a href="/index">HOME</a> |
+				<a href="/">HOME</a> |
 				<a href="/about">ABOUT</a> |
 				<a href="/login">SIGNUP/LOGIN</a>
 			</div>
 			<div id="footerText">
-				Chalkboard is a simple, streamlined solution for interaction between faculty, teaching assistants (TAs) and students. Copyright 1999-2014 by CHALKBOARD, Inc. All Rights Reserved.
+				Chalkboard is a simple, streamlined solution for interaction between faculty, teaching assistants (TAs) and students. Copyright 1999-${current_year} by CHALKBOARD, Inc. All Rights Reserved.
 			</div>
 		</div>
 	</body>
