--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
     	margin-left: auto;
     	margin-right: auto;
     	margin-bottom: 15px;
-    	width: 600px;
+    	max-width: 600px;
     }
     
     .introbodytable th {
