added intro page content and tweaked css for two columns

--- a/html/introbody.tmpl
+++ b/html/introbody.tmpl
@@ -1,19 +1,34 @@
 		
 	<div id="bodyarea">
-		<table class="introbodytable" id="ta-body-table">
-		    <th>Teaching Assistants</th>
-		    <tr>
-		        <td>
-		            The teaching assistant role enables the user to create a class page, upload documents, manage calander information,set visibility of documents, assign grades, and invite students to join a class.
-		        </td>    
-		    </tr>
-		</table>
-		<table class="introbodytable" id="students-body-table">
-		    <th>Students</th>
-		    <tr>
-		        <td>
-		            The student role enables the user to join/view class pages, upload documents, and view calander info.
-		        </td>
-		    </tr>
-		</table>
+
+		<div id="introText" class="introColumn">
+		<h1>What is Chalkboard?</h1>
+
+		<p>Chalkboard allows streamlined communication between Teaching Assistants and Students. Whereas other large
+		systems require dedicated administrators and seem to make life harder, Chalkboard is simple.</p>
+
+		<p>Simply <a href="">
+		Login</a> with your Google Account, set your school email, and create a class page. Then you're all set to
+		import a student list, setup meeting times, post examples and announcements, and manage class notes and
+		presentations, all from a simple dashboard.</p>
+		</div>
+
+		<div id="loginTables" class="introColumn">
+			<table class="introbodytable" id="ta-body-table">
+			    <th>Teaching Assistants</th>
+			    <tr>
+			        <td>
+			            The teaching assistant role enables the user to create a class page, upload documents, manage calander information,set visibility of documents, assign grades, and invite students to join a class.
+			        </td>    
+			    </tr>
+			</table>
+			<table class="introbodytable" id="students-body-table">
+			    <th>Students</th>
+			    <tr>
+			        <td>
+			            The student role enables the user to join/view class pages, upload documents, and view calander info.
+			        </td>
+			    </tr>
+			</table>
+		</div>
 	</div>
