--- a/css/style.css
+++ b/css/style.css
@@ -8,27 +8,48 @@
 		font-family: ChalkLetters, arial, sans-serif;
 		color: #438EFF;
 	}
+
+	/*** Main Area ***/
 	
 	#bodyarea {
 		background-color: #ffffff;
 		width: 85%;
-		padding: 30px;
-		margin-top: 20px;
-		margin-left: auto;
-		margin-right: auto;
+		/*padding: 30px;*/
+		padding: 30px 0px;
+		margin: 20px auto;
 		box-shadow: 10px 8px 10px #888888;
+		text-align: center;
 		
 	}
 
-	#footer {
-		margin-top: 30px;
+	#bodyarea div {
+		display: inline-block;
 	}
-	
+
+	.introColumn {
+		max-width: 650px;
+		vertical-align: top;
+		margin: 1em;
+	}
+
+	#introText {
+
+	}
+
+	#introText p {
+		text-align: left;
+	}
+
+	#loginTables {
+
+	}
+
     .introbodytable {
-    	margin-left: auto;
+    	/*margin-left: auto;
     	margin-right: auto;
     	margin-bottom: 15px;
-    	max-width: 600px;
+    	*//*max-width: 600px;*/
+    	margin: 0 auto;
     }
     
     .introbodytable th {
@@ -41,11 +62,16 @@
         padding: 3px;
         margin: 2px;
         border: 2px solid #438EFF;
+        text-align: left;
     }
-    
-    #footerAbout {
-    	text-align: center;
-    }
+
+
+    /*** Footer ***/
+
+   	#footer {
+		margin-top: 30px;
+		text-align: center;
+	}
 
 	a:link {
 	    color: #438EFF;
@@ -95,6 +121,7 @@
 		position: relative;
 		display: block;
 		padding: 25px 10px 0px 10px;
+		border-radius: 10px;
 	}
 	
 	#logo{
