Updated templating and added hover effects
I updated the templating to use the one demonstrated in class instead
our manual templating.  This takes care of a lot of the stuff for us and
makes our code cleaner.

I also renamed the template files to .html so that they can be
(somewhat) viewable in browsers while designing.  This also helps with
code formatting for apps like Notepad++ that format based on file
extension.

Lastly I added a hover over effect for our links.

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@
 		margin-top: 30px;
 		text-align: center;
 	}
-
+	
 	a:link {
 	    color: #438EFF;
 	}
@@ -99,6 +99,7 @@
 	
 	a:hover {
 	    color: #438EFF;
+		text-shadow: 0 0 4px #6699FF;
 	}
 	
 	a:active {
@@ -125,31 +126,36 @@
 	}
 
 	/**** Header ****/
-
-	a.coloredLink {
-    	color: inherit; /* Set the link to inherit the original color */
-		text-decoration: none;
-	}
-	
 	#header{
 		height: 50px;
 		background-color: #696969;
 		position: relative;
 		display: block;
+		font-size: 35px;
 		padding: 25px 10px 0px 10px;
 		border-radius: 10px;
 	}
 	
 	#logo{
+		margin-top: -14px; 
 		display: inline-block;
 		float: left;
-		font-size: 60;
-		text-decoration: underline;
 		color: #438EFF;
+		margin-left: 15px;
+	}
+	
+	#logo a:hover{
+		text-shadow: 0 0 12px #505050;
 	}
 	
 	#loginDiv {
+		margin-top: -6px; 
 		display: inline-block;
 		float: right;
+		font-size: 23;
 		margin-right: 15px;
+	}
+	
+	#loginDiv a:hover{
+		text-shadow: 0 0 12px #505050;
 	}
