Fixed login link

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 			<p>Chalkboard allows streamlined communication between Instructors and Students. Whereas other large
 			systems require dedicated administrators and seem to make life harder, Chalkboard is simple.</p>
 
-			<p>Simply <a href="">
+			<p>Simply <a href="/login">
 			Login</a> with your Google Account, set your school email, and create a class page. Then you're all set to
 			import a student list, setup meeting times, post examples and announcements, and manage class notes and
 			presentations, all from a simple dashboard.</p>
