Added instructor page link from intro page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 			<div id="loginTables" class="introColumn">
 				<table class="introbodytable" id="ta-body-table">
-					<th>Instructors</th>
+					<th><a href="/instructor">Instructors</a></th>
 					<tr>
 						<td>
 								The instructor role enables the user to create a class page, upload documents, manage calendar information,set visibility of documents, assign grades, and invite students to join a class.
