--- a/templates/instructor.html
+++ b/templates/instructor.html
@@ -11,8 +11,8 @@
 				<br>
 				<a href="">Edit Profile</a><br>
 				<a href="">Manage Students</a><br>
-				<a href="">Upload Documents</a><br>
-				<a href="">Manage Calander</a><br>
+				<a href="/documents">Upload Documents</a><br>
+				<a href="">Manage Calendar</a><br>
 				<a href="">Manage Syllabus</a><br>
 				</ul>
 				</h3>
