A new font to maybe try out
CSS temporarily set to the new font. Can run AppEngine locally to see
it.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 	@font-face { /* Load the new "chalk" font */
 		font-family: ChalkLetters;
-		src: url(../fonts/SqueakyChalkSound.ttf); 
+		src: url(../fonts/Sketchy.ttf); 
 	}
 	 
 	body {
