Removed flashy CSS3, and added room for search bar
We still need to add a search bar feature, but the page looks more like
what I think it should look like in the end

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,29 +7,13 @@
 			<p>Chalkboard allows streamlined communication between Instructors and Students. Whereas other large
 			systems require dedicated administrators and seem to make life harder, Chalkboard is simple.</p>
 
-			<p>Simply <a href="/login">
-			Login</a> with your Google Account, set your school email, and create a class page. Then you're all set to
-			import a student list, setup meeting times, post examples and announcements, and manage class notes and
-			presentations, all from a simple dashboard.</p>
-			</div>
+			<p><b><u>Instructors</u></b> can simply <a href="/instructor">
+			Login</a> with their Google Account and easily begin creating class pages. You will seamlessly be able to 
+			import student lists, set up meeting times, post solution guides and announcements, and more -- all from a simple dashboard.</p>
 
-			<div id="loginTables" class="introColumn">
-				<table class="introbodytable" id="ta-body-table">
-					<th><a href="/instructor">Instructors</a></th>
-					<tr>
-						<td>
-								The instructor role enables the user to create a class page, upload documents, manage calendar information,set visibility of documents, assign grades, and invite students to join a class.
-						</td>    
-					</tr>
-				</table>
-				<table class="introbodytable" id="students-body-table">
-					<th>Students</th>
-					<tr>
-						<td>
-							The student role enables the user to join/view class pages, upload documents, and view calendar info.
-						</td>
-					</tr>
-				</table>
+			<p><u><b>Students</b></u> can begin by searching for their instructor, university, or course name below: </p>
+			
+			Search bar goes here (eventually)
 			</div>
 		</div>
 	{% endblock %}
