Fixed login link

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
 	<div id="footerAbout">
 		<a href="/">HOME</a> |
 		<a href="/about">ABOUT</a> |
-		<a href="/login">SIGNUP/LOGIN</a>
+		<a href="/instructor">SIGNUP/LOGIN</a>
 	</div>
 	<div id="footerText">
 		Chalkboard is a simple, streamlined solution for interaction between instructors and students. Copyright 1999-{{current_year}} by CHALKBOARD, Inc. All Rights Reserved.
