--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
 <div id="header">
 	<div id="logo"><a href="/">Chalkboard</a></div>
-	<div id="loginDiv"><a href="/login">Log In</a></div>
+	<div id="loginDiv"><a href="/instructor">Log In</a></div>
 </div>
