--- a/templates/instructor.html
+++ b/templates/instructor.html
@@ -2,15 +2,15 @@
 	{% block bodycontent %}
 		<div id="bodyarea">
 			<div id="introText" class="introColumn">
-				<h2>Course List: </h2>
-				<br>
-				<br>
+				<h2><u>Course List: </h2></u>
+				
 				{% for course in courses %}
-				{{course}} <br><br>
+				<a href="{{course.URL}}">{{course.course_name}}</a>
+				<br>
 				{% endfor %}
+				
+				<br>
 				<a href="/instructor">Create New Course</a>
-				</ul>
-
 			</div>
 		</div>
 	{% endblock %}
