--- a/templates/new_course.html
+++ b/templates/new_course.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 	{% block bodycontent %}
 		<div id="bodyarea">
-			<a href="{{logout}}">Click Here to sign out.</a>
-		
 			<div id="introText" class="introColumn">
-				<h1>New Course Page</h1>
+				<h1>Create A Course:</h1>
 				<h3>Creating a course is simple. We just need some info from you:</h3>
 				<br>
-				<form method="post" action="/instructor">
+				<form method="post" action="/new_course">
 					Course Name: <input type="text" name="course"><br>
 					Course Number: <input type="number" name="number"><br>
 					Instructor Name: <input type="text" name="name"><br>
