Fixed redirection issue issue/typo

--- a/templates/instructor.html
+++ b/templates/instructor.html
@@ -10,7 +10,7 @@
 				{% endfor %}
 				
 				<br>
-				<a href="/instructor">Create New Course</a>
+				<a href="/new_course">Create New Course</a>
 			</div>
 		</div>
 	{% endblock %}
