--- a/templates/new_course.html
+++ b/templates/new_course.html
@@ -16,7 +16,7 @@
 					Department: <input type="text" name="department"><br>
 					Semester: <input type="text" name ="semester"><br>
 					Year: <input type="number" name="year"><br>
-					<input type="submit">
+					<input type="submit" value="Create Course">
 				</form>
 			</div>
 		</div>
