--- a/templates/documents.html
+++ b/templates/documents.html
@@ -7,7 +7,7 @@
 			<div id="uploadText" class="uploadstuff">
 				<h1>{{course}}</h1>
 				<br><form action={{upload_url}} method="POST" enctype="multipart/form-data">
-				Upload File: <input type="file" name="file"><br> <input type="submit" name="submit" value="Submit"></form>
+				Upload File: <input type="file" name="file"><br> <input type="submit" name="submit" value="Upload File"></form>
 				</div>
 		</div>
 	{% endblock %}
