--- a/templates/instructor.html
+++ b/templates/instructor.html
@@ -11,7 +11,7 @@
 				
 				<br>
 				<a href="/new_course">Create New Course</a><br>
-				<a href="/send_email">Send an Email to {{current_course.course_name}}</a>
+				<a href="/send_email">Send an Email</a>
 				<br>
 				<br>
 				<br>
