Minor edit course stuff.

--- a/templates/edit_course.html
+++ b/templates/edit_course.html
@@ -2,13 +2,14 @@
 	{% block bodycontent %}
 		<div id="bodyarea">
 			<div id="introText" class="introColumn">
-				<h3>From this page, the instructor can perform the following functions:
+				<h2>From this page, the instructor can perform the following functions: </h2>
 				<br>
-				<br>
+				<h3>
 				<a href="">Manage Students</a><br>
 				<a href="/documents">Upload Documents</a><br>
 				<a href="">Manage Calendar</a><br>
-				<a href="">Manage Syllabus</a><br>
+				<a href="">Manage Syllabus</a><br><br><br>
+				<a href="">Select a Different Course to Edit</a>
 				</ul>
 				</h3>
 			</div>
