Minor fixes to get email working in new schema, small bugfixes

--- a/templates/edit_course.html
+++ b/templates/edit_course.html
@@ -8,8 +8,9 @@
 				<a href="">Manage Students</a><br>
 				<a href="/documents">Upload Documents</a><br>
 				<a href="">Manage Calendar</a><br>
+				<a href="/send_email">Email Class</a><br>
 				<a href="">Manage Syllabus</a><br><br><br>
-				<a href="">Select a Different Course to Edit</a>
+				<a href="/instructor">Select a Different Course to Edit</a>
 				</ul>
 				</h3>
 			</div>
