Small prettiness tweaks

--- a/templates/instructor.html
+++ b/templates/instructor.html
@@ -4,7 +4,7 @@
 			<div id="introText" class="introColumn">
 				<h2><u>Course List: </h2></u>
 							
-				<a href="javascript:courseList();">Show All</a>
+				<a href="javascript:courseList();">Show All</a><br><br>
 				<div id="courselist"></div>
 				
 				<script>
@@ -81,7 +81,7 @@
 					  }
 					}
 				</script>
-
+                <br>
 				<br>
 				<a href="/new_course">Create New Course</a>
 			</div>
