Show which course you're editing
But it's kinda ugly, we can definitely eventually do nicer.

--- a/templates/edit_course.html
+++ b/templates/edit_course.html
@@ -2,6 +2,7 @@
 	{% block bodycontent %}
 		<div id="bodyarea">
 			<div id="introText" class="introColumn">
+                <h1>Currently Editing: {{course_name}}
 				<h2>From this page, the instructor can perform the following functions: </h2>
 				<br>
 				<h3>
