--- a/templates/edit_course.html
+++ b/templates/edit_course.html
@@ -6,11 +6,11 @@
 				<h2>From this page, the instructor can perform the following functions: </h2>
 				<br>
 				<h3>
-				<a href="">Manage Students</a><br>
+				<!--<a href="">Manage Students</a><br>-->
 				<a href="/documents">Upload Documents</a><br>
-				<a href="">Manage Calendar</a><br>
+				<!--<a href="">Manage Calendar</a><br>-->
 				<a href="/send_email">Email Class</a><br>
-				<a href="">Manage Syllabus</a><br><br><br>
+				<!--<a href="">Manage Syllabus</a><br><br><br>-->
 				<a href="/instructor">Select a Different Course to Edit</a>
 				</ul>
 				</h3>
