--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 			<p>Chalkboard allows streamlined communication between Instructors and Students. Whereas other large
 			systems require dedicated administrators and seem to make life harder, Chalkboard is simple.</p>
 
-			<p><b><u>Instructors</u></b> can simply <a href="/instructor">
+			<p><b><u>Instructors</u></b> can simply <a href="{{login}}">
 			Login</a> with their Google Account and easily begin creating class pages. You will seamlessly be able to 
 			import student lists, set up meeting times, post solution guides and announcements, and more -- all from a simple dashboard.</p>
 
